# serde-parquet

./: Cargo.toml
src/: de.rs  lib.rs  ser.rs
tests/: test.parquet
